--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body{
-    background: rgb(2,0,36);
-background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(53,195,12,1) 0%, rgba(0,212,255,1) 100%);
+    background: rgb(128,78,86);
+    background: linear-gradient(90deg, rgba(128,78,86,1) 0%, rgba(156,108,36,1) 59%, rgba(57,54,50,1) 100%);
 }
 
 h1{
-    background-color: rgb(0, 0, 0);
+    background: rgb(2,0,36);
+    background: linear-gradient(270deg, rgba(2,0,36,1) 0%, rgba(53,195,12,1) 0%, rgba(0,212,255,1) 100%);
     text-align: center;
     font-size: 100px;
-    color: rgba(53,195,12,1);
+    color: black;
 }
 
 .heading{
@@ -19,13 +20,13 @@ h1{
 
 
 .choice{
-color: black;
+color: rgba(1,255,0,1) ;
 font-size: 40px;
 margin-bottom: 50px;
-border-radius: 69%;
-background-position: center;
-background: rgb(131,58,180);
-background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(1,255,0,1) 0%, rgba(252,176,69,1) 58%);
+margin-left: 45%;
+margin-right: 45%;
+background-color: black;
+border-radius: 45%;
 }
 
 #imgg{
