--- a/style.css
+++ b/style.css
@@ -29,6 +29,9 @@ background-color: black;
 border-radius: 45%;
 }
 
+#ch3{
+    font-size: 30px;
+}
 #imgg{
     text-align: center;
     display: contents;
